objects/X11_Case_GIS_Layer__c.object
<CustomObject>
    <fields>
        <fullName>Case_Configuration_Link_Field__c</fullName>
        <formula>Case_Configuration__r.Case_Configuration_Link_Field__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Configuration Link Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Configuration</label>
        <referenceTo>X11_Case_Metadata_Type__c</referenceTo>
        <relationshipLabel>Case GIS Layers</relationshipLabel>
        <relationshipName>Case_GIS_Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>color__c</fullName>
        <label>color</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>label__c</fullName>
        <label>label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <label>url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case GIS Layer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CGL-{0000}</displayFormat>
        <label>Case GIS Layer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case GIS Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>